Reset to last working checkpoint.